2006-04-04  Gora Mohanty  <gmohanty@cvs.gnome.org>

        * configure.in: Added 'or' (Oriya) to ALL_LINGUAS.

2006-04-04  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-search-pager.c: 
	Strip leading and training spaces from search terms
	Fixes #334568
	
2006-04-04  Pema Geyleg  <pema.geyleg@gmail.com>

	* configure.in: Added dz (Dzongkha) to ALL_LINGUA

2006-04-03  Brent Smith  <gnome@nextreality.net>

	* data/man.xml.in: Add 3perl to the Perl Functions section

2006-04-03  Brent Smith  <gnome@nextreality.net>

	* src/yelp-search-pager.c: (snippet_closed), (snippet_response),
	(snippet_error), (finished_cb): various beagle signal and refcount
	fixes, patch from Joe Shaw.  Fixes #334938

2006-03-23  Brent Smith  <gnome@nextreality.net>

	* stylesheets/search2html.xsl:
	Display a header on the search results which tells the user how many
	results were returned from the query, fixes #334923

2006-03-22  Brent Smith  <gnome@nextreality.net>

	* src/gtkentryaction.c: (gtk_entry_action_finalize):
	* src/yelp-db-pager.c: (db_pager_dispose):
	* src/yelp-info-pager.c: (info_pager_dispose):
	* src/yelp-man-pager.c: (man_pager_dispose):
	* src/yelp-pager.c: (pager_dispose):
	* src/yelp-search-pager.c: (search_pager_dispose):
	* src/yelp-toc-pager.c: (toc_pager_dispose):
	* src/yelp-xslt-pager.c: (xslt_pager_dispose):
	Don't free an object's private data since it is de-allocated
	automatically if it is created using g_type_class_add_private() 
	-backport from HEAD

2006-03-21  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-html.cpp:
	Keep track of timeout and remove when not needed
	Fixes bug #335306


==================== 2.14.0 ====================

2006-03-17  Jérémy Ar Floc'h  <jeremy.lefloch@gmail.com>

	* configure.in:
	* po/br.po: Added Breton translation.

2006-03-12  Brent Smith  <gnome@nextreality.net>

	* NEWS:
	* configure.in:
	- Version 2.14.0

2006-02-27  Don Scorgie  <dscorgie@cvs.gnome.org>

	* stylesheets/search2html.xsl: 